[package]
name = "cueball-dns-resolver"
version = "0.0.2"
authors = ["Jon Anderson <jon.anderson@joyent.com>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
derive_more = "0.14.0"
sha1 = "0.6.0"
slog = "2.4.1"
state_machine_future = "0.2.0"
futures = "0.1"
trust-dns-resolver = "0.10.3"
trust-dns = "^0.13"
chrono = "0.4"
tokio = "0.1.5"
tokio-core = "0.1.17"
resolv-conf = "0.6.2"
cueball = { git = "https://github.com/joyent/rust-cueball.git" }

[dev-dependencies]
slog-term = "2.4.0"
